remove bottom margin to correct  top cut off

--- a/css/style.css
+++ b/css/style.css
@@ -1479,7 +1479,7 @@ div.item_8 a img:hover {
 	transition: 0.175s linear;
 }
 
-div.item_2 span + img {
+div.item_2 div + img {
 	height: 100%;
 	width: auto;
 	padding: 1em 0;
@@ -1558,8 +1558,7 @@ div.item_6 img {
 div.item_7 {
 	display: flex;
 	flex-direction: row;
-	/* justify-content: flex-end;
-  align-items: flex-end; */
+	align-items: center;
 }
 
 div.item_7 div {
@@ -1575,7 +1574,7 @@ div.item_7 div.flipbook-viewport {
 
 div.item_7 div.flipbook-viewport + img {
 	transform: translateX(-1.5em);
-	margin-bottom: 6em;
+ 
 }
 
 div.item_7 img.kid-cry-img {
